# Dender

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: AccelerationStructure.cpp  AccelerationStructure.hpp  App.cpp  App.hpp  AppWindow.cpp  AppWindow.hpp  GlfwHelper.hpp  RaytracingBuilder.cpp  RaytracingBuilder.hpp  Renderer.cpp  Renderer.hpp  SceneAccelerationStructure.cpp  SceneAccelerationStructure.hpp  camera.cpp  camera.hpp  main.cpp  scene_acceleration_structure.cpp  scene_acceleration_structure.hpp  utils.hpp
src/Assets/: GltfScene.cpp  GltfScene.hpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Scene.hpp  TinyGltfLoader.cpp  fast_gltf_loader.cpp  fast_gltf_loader.hpp
src/Shaders/: rt.rchit  rt.rgen  triangle.frag
src/Structs/: Assets.h  Assets.hpp  Texture.hpp  Vertex.hpp
src/assets/: TinyGltfLoader.hpp  fast_gltf_loader.hpp
src/shaders/: rt.rgen  rt.rmiss  triangle.vert
src/structs/: Assets.hpp
src/util/: handle.hpp  handle_manager.cpp  handle_manager.hpp  id_gen.hpp  manager.cpp  manager.hpp  result.hpp
